@@ -1,3 +1,8 @@
+2009-07-13 Fred Kiefer <FredKiefer@gmx.de>
+
+        * Source/winlib/WIN32GState.m (-_paintPath:) Only draw when the
+	fill/stroke colour has a non zero alpha. 
+
 2009-07-10 Fred Kiefer <FredKiefer@gmx.de>
 
         * Source/cairo/CairoGState.m
